# lab4_sem3_graphs

./: CMakeLists.txt
src/: Graph.h  PairHash.h  UI_funcs.h  lab4_sem3(graphs_algos).cpp  lab4_sem3(graphs_algos).h
src/DictionaryStructs/: Dictionary.h
src/Tests/: tests.cpp
